# portfolio

./: .dockerignore  .gitignore  README.md  api.py  batch.py  get-data.py  job.py  portfolio-api.sh  portfolio_performance.html  pyproject.toml  run.py
data/: isin_mapping.json  portfolio.db-shm  portfolio.db-wal
data/backtest/: sp500.csv
data/fixtures/: alert_description.json  fund.json  signal_dimension.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
html/: add-fund.js  api.js  app.js  health.js  index.html  management.js  portfolios.js  risk.js  style.css  tactical.js
job/: download_sp500.py
src/portfolio/: __init__.py  analysis.py  download.py  funds.py  get_data.py  isin_mapping.py  returns.py  series.py  signals.py
src/portfolio/api/: __init__.py  api.py  app.py  auth.py  curve.py  database.py  management_chart.py  metrics.py  mock_management.py  models.py  report.py
src/portfolio/api/services/alerts/: router.py  (+4 more)
src/portfolio/batch/: alert_storage.py  download.py  metrics.py  navs.py  signals.py  sp500.py
src/portfolio/common/: alert_descriptions.py  alert_history.py  alert_storage.py  equity.py  indexes.py  macro_constants.py  macro_signals.py  market.py  metrics.py  navs.py  series.py  signal_dimensions.py  signal_storage.py  signals.py
src/portfolio/datasource/: errors.py  fred.py  morningstar.py
src/portfolio/datasources/: fred.py  morningstar.py  sp500.py
src/portfolio/finance/: analysis.py  download.py  funds.py  metrics.py  morningstar.py  nav_files.py  navs.py  returns.py  series.py  signals.py
src/portfolio/job/: download.py  metrics.py  navs.py  signals.py  sp500.py
src/portfolio/storage/: database.py  models.py
src/portfolio/storage/fixtures/: alerts.py
tests/: test_alert_history.py  test_alert_history_counts.py  test_api.py  test_curve.py  test_database_migration.py  test_fred.py  test_funds.py  test_get_navs.py  test_indexes_files.py  test_isin_mapping.py  test_management_chart.py  test_market_frame.py  test_metrics.py  test_nav_files.py  test_portfolio.py  test_portfolio_model.py  test_series_files.py  test_signal_catalog_sync.py  test_signal_code_migration.py  test_signal_dimensions.py  test_signal_models.py  test_signal_reset.py  test_signal_storage.py  test_signals_api.py  test_signals_download.py  test_sp500_download.py
(+8 files in other folders)
