[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pandas>=3.0.3",
    "fredapi>=0.5.2",
    "playwright>=1.60.0",
    "requests>=2.34.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "quantstats>=0.0.81",
    "sqlmodel>=0.0.24",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.28.0",
]
