[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pandas>=3.0.3",
    "fredapi>=0.5.2",
    "requests>=2.34.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "quantstats>=0.0.81",
    "sqlmodel>=0.0.24",
    "yfinance>=1.4.1",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty>=0.0.55",
    "pytest>=7.0",
    "httpx>=0.28.0",
]
